fix: windows scrollbar in profile sidebar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,15 +19,6 @@ h6 {
   @apply text-white;
 }
 
-.sidebar-scroll {
-  @apply overflow-y-scroll;
-}
-
-@media screen(md) {
-  .sidebar-scroll {
-    max-height: calc(100vh - 74px);
-  }
-}
 
 body,
 html {
